Ruler/Protractor not working in Quad view #44011

Closed
opened 2015-03-16 08:07:22 +01:00 by Anton Burkun · 10 comments

System Information
Ubuntu 14.04

Blender Version
Broken: Blender 2.73a bbf09d9
Worked: ?

Short description of error
In quad view ruler not possible add to desired position. It oriented in XY (front) and go along axis in top and right views. In axonometry not possible to add.

Exact steps for others to reproduce the error

  1. In start scene
  2. Alt+Ctrl+Q - toggle quad view
  3. Tools, Grace Pencil, "Ruler/Protractor"
  4. Try to add some with Ctrl+LMB in different viewports
**System Information** Ubuntu 14.04 **Blender Version** Broken: Blender 2.73a bbf09d9 Worked: ? **Short description of error** In quad view ruler not possible add to desired position. It oriented in XY (front) and go along axis in top and right views. In axonometry not possible to add. **Exact steps for others to reproduce the error** 1. In start scene 2. Alt+Ctrl+Q - toggle quad view 3. Tools, Grace Pencil, "Ruler/Protractor" 4. Try to add some with Ctrl+LMB in different viewports
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @agb

Added subscriber: @agb
Campbell Barton self-assigned this 2015-03-16 09:16:23 +01:00

This probably wont make it in as a quick-fix for 2.74, but this patch resolves the bug D1187
(also for knife/loopcut)

This probably wont make it in as a quick-fix for 2.74, but this patch resolves the bug [D1187](https://archive.blender.org/developer/D1187) (also for knife/loopcut)
Member

Added subscribers: @ideasman42, @JulianEisel

Added subscribers: @ideasman42, @JulianEisel
Member

@ideasman42, what's up with this? Patch looks good at a quick glance, anything holding it back?

@ideasman42, what's up with this? Patch looks good at a quick glance, anything holding it back?
Member

Also, I think this should go to the todo list?

Also, I think this should go to the todo list?

I'll apply the fix for 2.75, I didnt do just yet because I wanted a good way to expose to Python.

I'll apply the fix for 2.75, I didnt do just yet because I wanted a good way to expose to Python.

This issue was referenced by 3f80accfb3

This issue was referenced by 3f80accfb34dd10e70380139941bcaf62702a6f8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3f80accfb3.

Closed by commit 3f80accfb3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44011
No description provided.